src/css/styles.css
                /* END OF TERMS AND CONDITIONS

Big Volume Energy (BVE) - Crypto price/volume momentum tracker
Copyright (C) 2021  George Tevdo

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published
by the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>. */



/*//////////////////////////////GLOBAL////////////////////////////////*/

@font-face {
  font-family: 'Vitreous';
  src: url(../fonts/Vitreous-Heavy.ttf);
}
@font-face {
  font-family: 'Typori';
  src: url(../fonts/Typori-Regular.ttf);
}
@font-face {
  font-family: 'Maki';
  src: url(../fonts/MAKISUPA.TTF);
}
@font-face {
  font-family: 'DPS';
  src: url(../fonts/DPSDbeyond.otf);
}
@font-face {
  font-family: 'Sax';
  src: url(../fonts/saxmono.ttf);
}

html {
  background: linear-gradient(157deg, rgba(19,20,32,1) 0%, rgba(29,26,45,1) 50%, rgba(19,20,32,1) 100%);
  height: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

body {
  margin: 0;
  min-height: 100%;
  display: grid;
  grid-template-rows: auto auto auto 1fr auto;
}

.disabled {
  color: grey;
  cursor: default;
}

.disabled:hover {
  color: grey;
}

.hotVol {
  background: linear-gradient(to right, #e49039 48%, #2a3347 50%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hotName {
  background: #e49039;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/*//////////////////////////////HEADER////////////////////////////////*/

#heading {
  text-align: center;
  margin-bottom: 2rem;
  margin-right: auto;
  margin-left: auto;
  border-radius: 5px;
}

h1 {
  background: linear-gradient(to bottom right, #C54C24 0%, #dab367 50%, #C54C24 100%);
  background-clip: unset;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-family: 'Vitreous';
  font-size: 14rem;
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 4px;
  letter-spacing: 2px;
}

/*//////////////////////////////USER CONTROLS/////////////////////////////*/

.userDash {
  position: fixed;
  top: 2%;
  left: 1%;
  display: inline-block;
}

.icon {
  width: 2rem;
}

.option .selected {
  color: #dab367;
  font-weight: bold;
}

@keyframes pulse {
  from { transform: scale(1); }
  50% { transform: scale(1.2); }
  to { transform: scale(1); }
}

.pulsing {
  animation-name: pulse;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}

.noClick {
  pointer-events: none;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropBtn {
  color: #f3ecce;
  font-size: 1.45rem;
  border-radius: 5px;
  margin-left: 0;
  padding: 0px 0px 0px 2px;
}

.expandbl {
  position: relative;
  display: inline-block;
}

.expBtn {
  color: #f3ecce;
  font-size: 1.15rem;
  font-family: 'Typori';
  font-weight: bold;
  margin-left: 0;
  padding: 0px 0px 0px 2px;
  width: 7rem;
  min-height: 2rem;
}

hr {
  border: dotted #131420 5px;
  border-bottom: none;
  width: 40%;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.options {
  display: none;
  position: absolute;
  background-color: #303a52;
  width: 16.5rem;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
  padding-top: 0;
  padding-bottom: 1rem;
  font-family: 'Typori';
  font-size: 1.15rem;
}

.options a {
  color: dimgrey;
  margin-left: .5rem;
  text-decoration: none;
  margin: 0;
}

.notifications {
  display: none;
  position: absolute;
  background-color: #303a52;
  width: 7rem;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
  padding-top: 0;
  padding-bottom: .5rem;
  /* font-family: 'Typori';
  font-size: 1.15rem; */
}

.phold {
  color: grey;
  text-align: center;
  margin-left: 0;
  font-family: 'Typori';
}

.logs {
  display: none;
  position: absolute;
  background-color: #303a52;
  width: 24rem;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  padding-top: .75rem;
  padding-bottom: .5rem;
  margin-left: .2rem;
  margin-top: -1.65rem;
  font-family: 'Sax';
  /* font-size: 1.15rem; */
}

.logLbl {
  text-align: center;
  color:#f3ecce;
  margin-top: .5rem;
  margin-bottom: .5rem;
  font-family: 'Typori';
  font-size: 114%;
  margin-left: 40%;
  font-weight: bold;
}

.fakeBtn .alertTool {
  visibility: hidden;
  width: 11rem;
  background-color: #3B3A45;
  color: #F7F2DE;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  position: absolute;
  z-index: 1;
  bottom: 101%;
  left: 96%;
  margin-left: -10rem;
  opacity: 0;
  transition: opacity 0.3s;
  font-family: 'Typori';
  font-size: .9rem;
}

.fakeBtn:hover .alertTool {
  visibility: visible;
  opacity: .9;
}

.alertSetup {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: .5rem;
}

.alBtn, .rmAlrt {
  margin-left: 0;
  min-height: 0;
  height: 2rem;
  width: 1.5rem;
  padding: 0;
}

.check {
  width: 1.5rem;
  padding-bottom: 11px;
}

.rmAl {
  width: 1.29rem;
  padding-bottom: 12px;
}

.hidden {
  display: none;
}

.alertLbl {
  color:#F7F2DE;
  font-family: 'Typori';
  padding-right: 4px;
  padding-left: .5rem;
}
/* ... */

